@@ -55,6 +55,7 @@ v30.0.00
         Staff: added an option to separate the Staff Duty page into tabs by duty type
         Students: fixed error on student profile related to a typo in studentMenuCategory variable
         System Admin: added the option to upload user photos in jpeg format
+        System Admin: added new loaned items import for Library
         Timetable: added coverage details for staff duty and activities on the timetable
         User Admin: added Sibling as option to Emergency Relationship select
         User Admin: added Prof. as an option in Title select
